--- a/app/globals.css
+++ b/app/globals.css
@@ -48,3 +48,6 @@ body::before {
   -webkit-backdrop-filter: blur(25px) brightness(0.6);
   z-index: -1;
 }
+:root {
+  --safe-top: env(safe-area-inset-top);
+}
