--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
   body{
     position:relative;
     overflow-x:hidden;
-    padding-top:var(--safe-top);
+    padding-top:0px;
     background:#f3f4f6;
   }
 }
